--- a/public/index.html
+++ b/public/index.html
@@ -10,23 +10,62 @@
     <!-- App CSS -->
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
 
+    <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
+
+    <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
+
+    <link rel="stylesheet" href="/styles/tweet-feed.css" type="text/css" />
+
+    <link rel="stylesheet" href=".../font-awesome/css/font-awesome.min.css">
+
+
     <!-- External JS -->
     <script type="text/javascript" src="/vendor/jquery-2.2.3.min.js"></script>
 
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/app.js"></script>
+
+    <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
+
+    <!-- External Font -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,300i,700,700i" rel="stylesheet">
+
   </head>
 
   <body>
 
     <!-- Top nav bar (fixed) -->
     <nav id="nav-bar">
-      <img class="logo" src="/images/bird.png" width="80px" height="80px">
+      <img class="logo" src="/images/bird.png">
       <span class="header">Tweeter</span>
     </nav>
 
     <!-- Page-specific (main) content here -->
     <main class="container">
+    <section class="new-tweet">
+      <h2>Compose Tweet</h2>
+      <form action="/tweets/" method="POST">
+        <textarea name="text" placeholder="What are you humming about?"></textarea>
+        <input type="submit" value="Tweet">
+        <span class="counter"><em>140</em></span>
+      </form>
+    </section>
+
+    <section class="tweet-feed">
+      <article>
+        <header>
+          <img class="profilePicture" src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcSENtameDRpysZnTW5T3aqkehVqFcZIGfS8Xe4lU4oiT2eqrO1y"/>
+        <h3>User's Name</h3>
+        <h4>@userid</h4>
+        </header>
+          <p class="the-tweet">The Tweeted Tweet is Here.</p>
+        <footer>
+          <p class="time-stamp">Time stamp</p>
+          <span class="fa fa-flag" aria-hidden="false"></span>
+        </footer>
+      </article>
+    </section>
+
     </main>
 
   </body>
