--- a/public/index.html
+++ b/public/index.html
@@ -16,8 +16,6 @@
 
     <link rel="stylesheet" href="/styles/tweet-feed.css" type="text/css" />
 
-    <link rel="stylesheet" href=".../font-awesome/css/font-awesome.min.css">
-
 
     <!-- External JS -->
     <script type="text/javascript" src="/vendor/jquery-2.2.3.min.js"></script>
@@ -29,6 +27,10 @@
 
     <!-- External Font -->
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,300i,700,700i" rel="stylesheet">
+
+
+    <script src="https://use.fontawesome.com/5c54a74138.js"></script>
+
 
   </head>
 
@@ -61,7 +63,10 @@
           <p class="the-tweet">The Tweeted Tweet is Here.</p>
         <footer>
           <p class="time-stamp">Time stamp</p>
-          <span class="fa fa-flag" aria-hidden="false"></span>
+          <span class="fa fa-flag" aria-hidden="true"></span>
+          <span class="fa fa-retweet" aria-hidden="true"></span>
+          <span class="fa fa-heart" aria-hidden="true"></span>
+          </p>
         </footer>
       </article>
     </section>
