--- a/public/index.html
+++ b/public/index.html
@@ -47,11 +47,18 @@
 
     <section class="new-tweet">
       <h2>Compose Tweet</h2>
-      <form action="/tweets/" method="POST">
+      <form action="/tweets/" method="POST" >
         <textarea name="text" placeholder="What are you humming about?"></textarea>
         <input type="submit" value="Tweet">
         <span class="counter"><em>140</em></span>
       </form>
+      <div id="log"></div>
+      <script>
+          $('form').on('submit', function( event) {
+            event.preventDefault();
+            console.log( $(this).serialize());
+          });
+    </script>
     </section>
 
     <section class="tweet-feed">
