Created a compose button. Highlights. Focus on textarea is broken

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,8 @@
 
     <link rel="stylesheet" href="/styles/tweet-feed.css" type="text/css" />
 
+    <link rel="stylesheet" href="/styles/composeBTN.css" type="text/css" />
+
 
     <!-- External JS -->
     <script type="text/javascript" src="/vendor/jquery-2.2.3.min.js"></script>
@@ -40,6 +42,7 @@
     <nav id="nav-bar">
       <img class="logo" src="/images/bird.png">
       <span class="header">Tweeter</span>
+      <button name="composeBtn">Compose</button>
     </nav>
 
     <!-- Page-specific (main) content here -->
