Browser now obtaining and sending tweets to MongoDB, improved some styling

--- a/public/index.html
+++ b/public/index.html
@@ -46,6 +46,7 @@
     </nav>
 
     <!-- Page-specific (main) content here -->
+    <div class="bgdContainer">
     <main class="container">
 
     <section class="new-tweet">
@@ -62,6 +63,7 @@
     </section>
 
     </main>
+    </div>
 
   </body>
 </html>
