--- a/public/index.html
+++ b/public/index.html
@@ -54,6 +54,8 @@
         <textarea name="text" placeholder="What are you humming about?"></textarea>
         <input type="submit" value="Tweet">
         <span class="counter"><em>140</em></span>
+        <span class="manyChar">Please hum less</span>
+        <span class="emptyChar">Hum something?</span>
       </form>
 
     </section>
